# Bonus-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/: CustomersDatabase.txt  ProduceByAmount.txt  ProduceByWeight.txt
include/: CustomerClass.hpp  FreeFunctions.hpp  ManagerClass.hpp  MenuClass.hpp  ProduceClass.hpp
src/: CustomerClass.cpp  FreeFunctions.cpp  ManagerClass.cpp  MenuClass.cpp  ProduceClass.cpp
